# Proglog

./: README.rst  pypi-readme.rst  pyproject.toml  setup.py
.github/workflows/: build.yml  publish.yml
docs/: conf.py  index.rst  ref.rst
proglog/: proglog.py
